--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "author": "Taras Kurilo, Ivan Perun",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
+    "autoprefixer": "^9.5.1",
     "concat": "^1.0.3",
-    "node-sass": "^4.5.3",
-    "npm-run-all": "^4.1.1",
-    "postcss-cli": "^4.1.1"
+    "node-sass": "^4.12.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^6.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "npm-check-updates": "^3.1.9"
+  }
 }
